# realtor

./: .env-example  Dockerfile  PROCESSOR_README.md  README.md  alembic.ini  bot.py  docker-compose.yml  download_ads.py  exchange.py  main.py  producer.py  pyproject.toml  requirements.in  response.json  translate.py
.github/: copilot-instuctions.md
.github/workflows/: deploy.yml
assets/database/: Dockerfile
assets/rabbit/: Dockerfile
migrations/: env.py
migrations/versions/: 1f3cd8127946_create_user_table.py  5b6d3e5eeb21_status_of_ads.py  621882a2cb45_create_other_table.py
modules/: DatabaseManager.py  gemini.py  models.py  processor.py  puller.py
modules/rabbit/: exchange.py  producer.py
