[project]
name = "reeltor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.14",
    "alembic>=1.16.4",
    "google-genai>=1.26.0",
    "pika>=1.3.2",
    "psycopg2-binary>=2.9.10",
    "pytelegrambotapi>=4.27.0",
    "python-dotenv>=1.1.1",
    "sqlalchemy[asyncio]>=2.0.41",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "flake8>=7.3.0",
    "pytest>=8.4.1",
]
